# hyprstorage

./: .gitignore  GEMINI.md  build.gradle  gradle.properties  mise.toml  package-lock.json  package.json  require.md
.husky/: pre-commit  pre-push
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
conductor/archive/githooks_20260110/: metadata.json  plan.md  spec.md
conductor/archive/logging_bridge_20260110/: plan.md
conductor/archive/refactor_20260110/: metadata.json  spec.md
conductor/archive/wasm_id_manager_20260110/: metadata.json  plan.md
conductor/tracks/githooks_20260110/: plan.md
conductor/tracks/logging_bridge_20260110/: metadata.json  plan.md  spec.md
conductor/tracks/refactor_20260110/: plan.md
conductor/tracks/wasm_id_manager_20260110/: plan.md  spec.md
docs/: api_spec.md  architecture.md  architecture_rethink.md  requirements.md  roadmap.md  use_case.md
docs/archive/: 01_architecture_core.md  02_transport_logic.md  03_integration_ae2.md  04_virtual_production.md  05_scripting_gui.md  06_end_content.md
docs/spec/: 03_data_model.md  05_ui_design.md  integration.md  networking.md  persistence.md  registry.md  ui.md
src/main/kotlin/net/hmjn/hyperstorage/: Hyperstorage.kt
src/main/kotlin/net/hmjn/hyperstorage/block/: HyperStorageBlock.kt  ModBlocks.kt
src/main/resources/: hyperstorage.mixins.json
src/main/resources/assets/hyperstorage/lang/: en_us.json
src/main/rust/: Cargo.toml
src/main/rust/src/: allocator.rs  api.rs  inventory.rs  lib.rs  logger.rs  node.rs  snapshot.rs  transport.rs
(+37 files in other folders)
