[package]
name = "hyper_visor_storage_wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
# boa_engine = "0.17" # 後ほど有効化

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
